Fix: Remove extra padding on top in Settings screen on phones

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -758,6 +758,10 @@ div[data-role=controlgroup] a.ui-btn-active {
     width: 47%;
 }
 
+.layout-mobile #myPreferencesMenuPage {
+    padding-top: 3.75em !important;
+}
+
 .headerUserButton {
     width: 2em;
     height: 2em;
